--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -14,10 +14,7 @@
       Soy Claudio Olivera, Programador Web Full Stack</h1>
     <p
       class="mt-3 mb-5 px-3 lg:text-xl xl:text-2xl dark:text-gray-100 lg:max-w-prose lg:mb-0 lg:mt-5 md:ml-0 lg:ml-4 font-bold dark:font-normal font-family-Open-Sans">
-      A lo largo de varios proyectos personales, he aplicado y perfeccionado mis habilidades técnicas en el desarrollo
-      front-end.<br> Tengo experiencia en desarrollo full stack y mi interés principal reside en el front-end, donde la
-      lógica se encuentra con el diseño de interfaces de usuario.<br> Siempre estoy buscando nuevas oportunidades para
-      aplicar mis habilidades y aprender nuevas tecnologías.
+      A lo largo de varios proyectos personales, he aplicado y perfeccionado mis habilidades técnicas en el desarrollo de aplicaciones web.<br> Tengo experiencia en desarrollo full stack, aunque mi interés principal reside en el front-end, donde la lógica se encuentra con el diseño de interfaces de usuario.<br> Siempre estoy buscando nuevas oportunidades para aplicar mis habilidades y aprender nuevas tecnologías.
     </p>
 
   </div>
